--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # API End points
 
-REACT_APP_API_URL=http://localhost:3000/api/
+REACT_APP_API_URL=https://todo-restapi-app.herokuapp.com/api/
 REACT_APP_LOGIN_URL=http://localhost:3505/
