production return login link changed

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # API End points
 
 REACT_APP_API_URL=https://todo-restapi-app.herokuapp.com/api/
-REACT_APP_LOGIN_URL=http://localhost:3505/
+REACT_APP_LOGIN_URL=https://todo-app-hackerearth.now.sh/
