--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik-antd": "^2.0.1",
     "js-sha512": "^0.8.0",
     "lodash": "^4.17.15",
+    "moment": "^2.26.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
