--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-app-hackerearth",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vigneshwaran-chandrasekaran.github.io/todo-app-hackerearth",
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
     "@reduxjs/toolkit": "^1.3.6",
@@ -13,6 +14,7 @@
     "cross-env": "^7.0.2",
     "formik": "^2.1.4",
     "formik-antd": "^2.0.1",
+    "gh-pages": "^3.0.0",
     "js-sha512": "^0.8.0",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
@@ -38,7 +40,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:production": "env-cmd -f .env.production react-scripts build"
+    "build:production": "env-cmd -f .env.production react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
