--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "todo-app-hackerearth",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vigneshwaran-chandrasekaran.github.io/todo-app-hackerearth",
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
     "@reduxjs/toolkit": "^1.3.6",
@@ -40,9 +39,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:production": "env-cmd -f .env.production react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "build:production": "env-cmd -f .env.production react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
