--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-lottie": "^1.2.3",
     "react-redux": "^7.2.0",
