unregister code changed

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Todo App",
-  "name": "Todo App PWA",
+  "short_name": "Todo app v2",
+  "name": "Todo app PWA v2",
   "icons": [
     {
       "src": "favicon.ico",
