--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.16.9",
     "axios": "^0.19.2",
-    "cross-env": "^7.0.3",
     "formik": "^2.2.9",
     "formik-antd": "^2.0.1",
     "gh-pages": "^3.2.3",
@@ -18,7 +17,6 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
-    "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -39,8 +37,16 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:production": "env-cmd -f .env.production react-scripts build"
+    "build:production": "env-cmd -f .env.production react-scripts build",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged",
+    "postinstall": "husky install",
+    "eslint-fix": "eslint --fix . --ext .js, .",
+    "eslint": "eslint src/**/*.{js,jsx}",
+    "lint": "prettier --check .",
+    "format": "prettier --write \"./**/*.{js,jsx,css,scss,md}\""
   },
+  "homepage": "https://todo-app-hackerearth.vercel.app/",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -57,8 +63,40 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.16.3",
+    "@babel/preset-react": "^7.16.0",
+    "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "fs": "0.0.1-security",
+    "husky": "^7.0.4",
     "jest": "^26.6.3",
+    "lint-staged": "^12.1.2",
+    "path": "^0.12.7",
+    "prettier": "^2.5.1",
+    "prop-types": "^15.7.2",
     "react-test-renderer": "^16.14.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx}": [
+      "eslint --fix",
+      "npm run eslint"
+    ],
+    "**/*.{json,css,scss,md}": [
+      "prettier --write",
+      "npm run format"
+    ]
   }
 }
